--- a/styles.css
+++ b/styles.css
@@ -532,7 +532,7 @@ footer {
 }
 
 .seat.selected {
-    background-color: #234b7e;
+    background-color: #fff;
 }
 
 .seat.occupied {
@@ -651,7 +651,7 @@ footer {
     font-size: 20px;
     letter-spacing: 1.3px;
     text-align: left;
-    color: #234b7e;
+    color: #fff;
 }
 
 .p-priser-summa {
