--- a/styles.css
+++ b/styles.css
@@ -172,26 +172,26 @@ footer {
 }
 
 .norcopiapictures img {
-    width: 18vw;
+    width: 10vw;
     height: auto;
 }
 
 /* FOOTER: Liten container för socials inom den stora containern */
 .socials {
     grid-area: socials;
-    margin-left: 5vw;
-    margin-top: 9.2vw;
+    margin-left: 10vw;
+    margin-top: 7vw;
 }
 
 .socials img {
-    width: 5vw;
+    width: auto;
     height: auto;
 }
 
 /* FOOTER: Liten container för länkar inom den stora containern */
 .footernav {
     grid-area: footernav;
-    margin-top: 80px;
+    margin-top: 60px;
     text-align: center;
 }
 
@@ -209,7 +209,8 @@ footer {
 .footernav ul li a{
     color: #fff;
     text-decoration: none;
-    font-size: 1.2em;
+    font-size: 1.2vw;
+    padding-right: 20px;
 }
 
 .footernav a{
@@ -240,13 +241,13 @@ footer {
 
 /* FOOTER: Copyright: Text */
 .copyright-text {
-    font-size: 1.5vw;
+    font-size: 1.5vh;
     text-align: center;
 }
 
 /* FOOTER: Copyright: Namn */
 .designer {
-    font-size: 1.5vw;
+    font-size: 1.5vh;
     opacity:0.7;
     letter-spacing: 1px;
     font-weight: 400;
@@ -255,7 +256,7 @@ footer {
 }
 
 /* Responsiv design för navbar och footer */
-@media (max-width: 1200px) {
+@media (max-width: 992px) {
     .navbar .links {
         display: none;
     }
@@ -266,19 +267,35 @@ footer {
 
     .dropdown_menu {
         display: block;
-    }
-}
-
-@media (max-width: 992px) {
-    .dropdown_menu {
-        display: block;
         width: 100%;
     }
 
-    .footernav ul li {
+    .footernav ul{
+        flex-direction: column;
         text-align: center;
-        margin: 10px;
-        display: block;
+        display: inline-block;
+    }
+
+    .footernav ul li{
+        margin: 30px;
+    }
+    .footernav ul li a{
+        font-size: 3vw;
+    }
+    .socials {
+        display: inline-block;
+        padding-top: 5vh;
+    }
+    .norcopiapictures img {
+        width: 20vw;
+        height: auto;
+        padding-top: 4vh;
+    }
+    .copyright-text {
+        font-size: 20px;
+    }
+    .designer {
+        font-size: 20px;
     }
 }
 
@@ -541,10 +558,11 @@ video {
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    }
 
-    .trailer {
+    #trailer {
         width: 80%;
+	height: auto;
     }
 }
 
@@ -903,6 +921,7 @@ video {
     .body-biljetter {
         font-size: 2vh;
     }
+
     .seat {
         width: 1.5vh;
         height: 1.5vh;
@@ -910,19 +929,27 @@ video {
         border-top-left-radius: 1.5vh;
         border-top-right-radius: 1.5vh;
     }
+
     .rubrik {
         font-size: 64pt;
     }
+
     .seat:nth-of-type(2) {
         margin-right: 4vh;
     }
+
     .seat:nth-last-of-type(2) {
         margin-left: 4vh;
     }
+
     .screen {
         height: 140px;
         width: 100%;
         margin: 15px 0;
+    }
+
+    #gradient-biljetter {
+        height: 20vh;
     }
 }
 
