--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ footer {
 }
 
 .footernav a:hover::before {
-    width: 100%;
+    width: 90%;
 }
 
 /* FOOTER: Copyright */
@@ -256,26 +256,23 @@ footer {
 }
 
 /* Responsiv design för navbar och footer */
+
 @media (max-width: 992px) {
     .navbar .links {
         display: none;
     }
-
     .navbar .toggle_btn {
         display: block;
     }
-
     .dropdown_menu {
         display: block;
         width: 100%;
     }
-
     .footernav ul{
         flex-direction: column;
         text-align: center;
         display: inline-block;
     }
-
     .footernav ul li{
         margin: 30px;
     }
@@ -410,7 +407,7 @@ footer {
 }
 
 #trailer {
-    width: 44%;
+    width: 60%;
     height: auto;
     padding-bottom: 500px;
     display: flex;
@@ -442,12 +439,13 @@ video {
         grid-column: span 4;
         text-align: center;
         font-size: 10vw;
-        padding-top: 20vw;
+        padding-top: 10vw;
         padding-bottom: 2vw;
     }
 
     .countdown {
         display: grid;
+        margin: 80px;
         grid-template-columns: 1fr;
         grid-template-rows: 60px 60px 60px 60px 60px 60px 60px 60px;
         grid-template-areas: 
@@ -459,7 +457,7 @@ video {
         'mm'
         'nedraknare-sekunder'
         'ss';
-        grid-gap: 75px;
+        grid-gap: 100px;
         font-size: 30px;
         justify-content: center;
         align-items: center;
@@ -562,7 +560,7 @@ video {
 
     #trailer {
         width: 80%;
-	height: auto;
+        height: auto;
     }
 }
 
@@ -570,93 +568,83 @@ video {
 
 /* Grid */
 .layout {
-    justify-content: center;
-    margin-top: 0px;
     display: grid;
-	grid-template-columns: auto auto auto;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas: 
-    'text-storyline text-storyline foto-kanin'
-    '. button-scroll .'
-    'foto-lova text-lova text-lova'
-    'text-elin text-elin foto-elin'
-    'foto-tobias text-tobias text-tobias';
-	padding: 0px;
-    padding-left: 15vw;
-    padding-right: 15vw;
+    ". . text-storyline text-storyline foto-kanin . ."
+    ". . . button-scroll . . ."
+    ". . . button-go-to . . ."
+    ". . foto-lova text-lova text-lova . ."
+    ". . text-elin text-elin foto-elin . ."
+    ". . foto-tobias text-tobias text-tobias . ."
+    ". . . . . . .";
+    grid-gap: 100px;
+}
+
+.layout p {
+    max-width: 50ch;
 }
 
 .text-storyline {
    grid-area: text-storyline;
-   width: 38vw;
-   margin-top: 45px;
-   margin-left: 80px;
 }
 
 #foto-kanin {
    grid-area: foto-kanin;
-   margin-top: 1px;
-   margin-left: 40px;
+}
+
+.scrollknapp-story {
+    grid-area: button-scroll;
+    margin-top: -100px;
+}
+
+#section-empty-story {
+    grid-area: button-go-to;
 }
 
 #text-lova {
   grid-area: text-lova;
-  padding-top: 175px;
-  width: 38vw;
-  margin-left: 40px;
 }
 
 #foto-lova {
    grid-area: foto-lova;
-   padding-top: 190px;
-   margin-left: 80px;
 }
 
 #text-elin {
     grid-area: text-elin;
-    padding-top: 35px;
-    width: 38vw;
-    margin-left: 93px;
 }
 
 #foto-elin {
     grid-area: foto-elin;
-    padding-top: 50px;
-    margin-left: 40px;
 }
 
 #text-tobias {
     grid-area: text-tobias;
-    padding-top: 35px;
-    width: 38vw;
-    margin-left: 40px;
 }
 
 #foto-tobias {
   grid-area: foto-tobias;
-  padding-top: 50px;
-  margin-left: 80px;
 }
 
 .h2-storysite {
-    font-size: 2em;
+    font-size: 50pt;
 }
 
 .h3-storysite {
-    font-size: 1.7em;
+    font-size: 24pt;
     font-weight: 700;
 }
 
 #info-om-film {
     font-weight: 400;
-    line-height: 25px;
-    font-size: 1vw;
+    line-height: 40px;
+    font-size: 16pt;
 }
 
 .p-storysite {
-    max-width: 100vw;
-    font-size: 1.2vw;
+    font-size: 16pt;
     font-weight: 300;
-    line-height: 28px;
+    line-height: auto;
 }
 
 .ig-link-story {
@@ -682,7 +670,7 @@ video {
 
 .scrollknapp-story {
     grid-area: button-scroll;
-    padding-top: 40px;
+    padding-top: 3vw;
 }
 
 .down-arrow-story {
@@ -695,7 +683,7 @@ video {
 }
 
 #gradient-story {
-    width: 100%;
+    width: 100vw;
     height: 40vh;
     background-color: #8b0101;
     background: linear-gradient(0deg, #8b0101 -20%, #010101 80%); /* deg = degrees/lutning av gradient) */
@@ -705,16 +693,27 @@ video {
     font-weight: 700;
 }
 
-@media(max-width: 1200px) {
+@media(max-width: 992px) {
     .layout { 
-        display: flex;
         justify-content: center;
         align-items: center;
+        display: flex;
         flex-direction: column;
+        font-size: 40px;
     }    
     
+    #info-om-film {
+        font-size: 12px;
+    }
     .p-storysite {
-            max-width: 1.5vh;
+        margin-top: 50px;
+        font-size: 18pt;
+        width: 100%;
+    }
+
+    .down-arrow-story {
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -921,7 +920,6 @@ video {
     .body-biljetter {
         font-size: 2vh;
     }
-
     .seat {
         width: 1.5vh;
         height: 1.5vh;
@@ -929,25 +927,20 @@ video {
         border-top-left-radius: 1.5vh;
         border-top-right-radius: 1.5vh;
     }
-
     .rubrik {
         font-size: 64pt;
     }
-
     .seat:nth-of-type(2) {
         margin-right: 4vh;
     }
-
     .seat:nth-last-of-type(2) {
         margin-left: 4vh;
     }
-
     .screen {
         height: 140px;
         width: 100%;
         margin: 15px 0;
     }
-
     #gradient-biljetter {
         height: 20vh;
     }
@@ -955,49 +948,49 @@ video {
 
 /*------------------------------STYLING AV KONTAKT-SIDA-----------------------------*/
 
-body .kontakt {
-    display: flex;
-    place-items: center;
-}
-
 .kontakta-oss {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 200px 400px 200px 1fr;
+    grid-template-areas:
+    ". . rubrik . ."
+    ". . fragor . ."
+    ". . . . ."
+    ". telefon adress mail ."
+    ". . . . .";
+    text-align: center;
+    grid-gap: 50px;
 }
 
-.h2-kontakta-oss {
-    text-align: center;
-    justify-content: center;
-	font-size: 38px;
+.kontakta-oss-rubrik {
+    grid-area: rubrik;
+	font-size: 2vw;
     font-weight: 700;
-    margin-top: 55px;
-    width: 50vw;
+}
+
+.kontaktfragor {
+    grid-area: fragor;
+    text-align: center;
+    font-size: 1vw;
 }
 
 .kontakt-content p {
 	font-weight: 300;
-    text-align: center;
     font-size: 1.2vw;
 }
 
-.kontaktinfo {
-    display: grid;
-    grid-template-columns: 300px 300px 300px;
-    grid-template-areas:
-    'adress' 'telefon' 'mail';
-    justify-content: center;
-    margin-top: 50px;
-    text-align: center;
-}
 
-.adress p {
+.adress {
+    grid-area: adress;
     font-size: 1vw;
     font-weight: 300;
+}
+
+.telefon {
+    grid-area: telefon;  
+}
+
+.mail {
+    grid-area: mail;
 }
 
 .kontaktinfo h2 {
@@ -1005,7 +998,6 @@ body .kontakt {
     font-weight: 600;
     font-style: normal;
     font-size: 2vw;
-    margin-bottom: 25px;
 }
 
 .adress-icon {
@@ -1018,7 +1010,6 @@ body .kontakt {
 
 .mail-icon {
     width: 7.5vw;
-    margin-top: 10px
 }
 
 .kontaktinfo p {
@@ -1032,4 +1023,48 @@ body .kontakt {
     height: 40vh;
     background-color: #8b0101;
     background: linear-gradient(0deg, #8b0101 -20%, #010101 70%); /* deg = degrees/lutning av gradient) */
+}
+@media(max-width: 992px) {
+    .kontakta-oss {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        font-size: 30px;
+        margin: 50px;
+    }
+
+    .kontakta-oss-rubrik {
+        grid-area: rubrik;
+        font-size: 3vh;
+        margin-top: 2vh;
+    }
+
+    .kontaktfragor {
+        grid-area: fragor;
+        text-align: center;
+        font-size: 1em;
+    }
+
+    .adress {
+        grid-area: adress;
+        font-size: 0.5em;
+        margin-top: 40px;
+    }
+
+    .telefon {
+        grid-area: telefon;
+        font-size: 0.5em;
+    }
+
+    .mail {
+        grid-area: mail;
+        font-size: 0.5em;
+    }
+
+
+    #gradient-kontakt {
+        height: 20vh;
+        width: 100%;
+    }
 }
